Fixed scrollbar issue and added mountain SVG

--- a/css/seattle-conference.less
+++ b/css/seattle-conference.less
@@ -29,6 +29,7 @@
   position: relative;
   color: #fff;
   padding-top: 2rem;
+  overflow: hidden;
   &:before {
     display: block;
     content: " ";
